k8s/70-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cc-basic-auth
spec:
  basicAuth:
    secret: cc-secrets
