k8s/deploy-database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: doe25-alexander-piensoho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  serviceName: "db"
  template:
    metadata:
      labels:
        app: database
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: database
          image: imresamu/postgis:18-3.6-alpine
          ports:
            - containerPort: 5432
              name: connect
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: app-data
              mountPath: /var/lib/postgresql/data
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            periodSeconds: 10
            timeoutSeconds: 3
  volumeClaimTemplates:
    - metadata:
        name: app-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 3Gi
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: doe25-alexander-piensoho
spec:
  selector:
    app: database
  clusterIP: None
  ports:
    - name: postgis
      port: 5432
      targetPort: connect
