k8s/80-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litter-hero
  namespace: doe25-alexander-piensoho
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: doe25-alexander-piensoho-cc-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: ${FRONTEND_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: ${BACKEND_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
